--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "tinycolor2": "^1.4.1",
     "typeface-open-sans": "0.0.54",
     "typescript": "^3.6.3",
-    "yaml-loader": "^0.5.0"
+    "yaml-loader": "^0.5.0",
+    "netlify-cms-app": "^2.10.0",
+    "gatsby-plugin-netlify-cms": "^4.1.33"
   },
   "keywords": [
     "gatsby"
@@ -101,7 +103,7 @@
     "precss": "^3.1.2",
     "prettier": "^1.18.2",
     "serve": "^11.1.0",
-    "sharp-cli": "^1.10.0",
+    "sharp-cli": "^1.11.0",
     "stylelint": "^9.3.0",
     "stylelint-config-css-modules": "^1.4.0",
     "stylelint-config-standard": "^18.3.0",
