--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "description": "Feature-rich blog with streamlined design.",
   "license": "MIT",
   "dependencies": {
+    "child_process": "^1.0.2",
+    "electron": "^16.0.7",
     "fontfaceobserver": "^2.0.13",
+    "fs": "0.0.1-security",
     "gatsby": "^2.1.30",
     "gatsby-image": "^2.2.18",
     "gatsby-plugin-feed": "^2.3.12",
     "gatsby-plugin-layout": "^1.1.7",
     "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-netlify": "^2.1.12",
+    "gatsby-plugin-netlify-cms": "^4.1.33",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-react-svg": "^2.1.2",
@@ -34,6 +38,7 @@
     "gatsby-transformer-sharp": "^2.2.14",
     "js-yaml": "^3.13.1",
     "lodash.throttle": "^4.1.1",
+    "netlify-cms-app": "^2.10.0",
     "normalize.css": "^8.0.0",
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
@@ -46,6 +51,7 @@
     "react-obfuscate": "^3.6.2",
     "react-share": "^2.2.0",
     "react-visibility-sensor": "^5.1.1",
+    "react-xml-viewer": "^1.3.0",
     "rehype-react": "^3.1.0",
     "styled-jsx": "^2.2.7",
     "styled-jsx-plugin-postcss": "^0.1.3",
@@ -53,9 +59,7 @@
     "tinycolor2": "^1.4.1",
     "typeface-open-sans": "0.0.54",
     "typescript": "^3.6.3",
-    "yaml-loader": "^0.5.0",
-    "netlify-cms-app": "^2.10.0",
-    "gatsby-plugin-netlify-cms": "^4.1.33"
+    "yaml-loader": "^0.5.0"
   },
   "keywords": [
     "gatsby"
