--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -55,10 +55,12 @@ color:
       i: '#514f4d'
       j: &color-gray-10 '#666' #'#3e3e3c'
       k: '#2b2826'
+      new: '#2c2823'
     black: '#000000'
+    common: '#F8F7F1'
 
   brand:
-    primary: &color-brand-primary '#E39E22' #'#07889B' #'#C0B283' #'#856084' #'#616247'
+    primary: &color-brand-primary '#87240f' #'#07889B' #'#C0B283' #'#856084' #'#616247'
     primaryLight: '#f9ebd2'
     primaryDark: '#B67A0E'
     hover: &color-brand-hover '#C09F80' #'#E37222' #'#DCD0C0' #'#9f7a9d'
@@ -74,7 +76,7 @@ font:
   # font options
   family:
     initial: 'Arial, sans-serif'
-    target: &font-family-target 'Open Sans'
+    target: &font-family-target 'Roboto'
   weight:
     standard: 400
     bold: 600
@@ -119,7 +121,7 @@ text:
     default: *font-line-height-l
   maxWidth:
     tablet: 650px
-    desktop: 700px
+    desktop: 1000px
 heading:
   family: *font-family-target
   size:
@@ -155,4 +157,5 @@ header:
     default: 50px
     fixed: 50px;
     homepage: 50px;
+    initial: 80px;
 
