--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -88,6 +88,7 @@ font:
     target: &font-family-target 'Roboto'
   weight:
     standard: 400
+    middle: 500
     bold: 600
   size:
     xxs: &font-size-xs .8em
