--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -61,7 +61,7 @@ color:
     black: '#000000'
     common: '#F8F7F1'
     dark: '#17181B'
-  green: '#64A17D'
+  green: '#00684A'
   violet: '#644DB3'
   yellow: '#F3C25D'
   sea: '#629BB0'
